Fix contrast issue in quote/image content type #391

--- a/resources/gato-component-patterns/css/quoteimage.scss
+++ b/resources/gato-component-patterns/css/quoteimage.scss
@@ -25,6 +25,9 @@
         }
         span {
           left: 0;
+          &.visuallyhidden {
+            color: $black !important;
+          }
         }
       }
     }
